--- a/Function/Test/Makefile
+++ b/Function/Test/Makefile
@@ -2,8 +2,11 @@
 
 build: gomodgen
 	export GO111MODULE=on
-	env GOOS=linux go build -ldflags="-s -w" -o bin/hello hello/main.go
-	env GOOS=linux go build -ldflags="-s -w" -o bin/world world/main.go
+	env GOOS=linux go build -ldflags="-s -w" -o bin/test test/main.go
+	env GOOS=linux go build -ldflags="-s -w" -o bin/create create/main.go
+	env GOOS=linux go build -ldflags="-s -w" -o bin/read read/main.go
+	env GOOS=linux go build -ldflags="-s -w" -o bin/update update/main.go
+	env GOOS=linux go build -ldflags="-s -w" -o bin/delete delete/main.go
 
 clean:
 	rm -rf ./bin ./vendor go.sum
