--- a/Function/Test/serverless.yml
+++ b/Function/Test/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: test
+service: CRUD
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
@@ -56,17 +56,35 @@ package:
     - ./bin/**
 
 functions:
-  hello:
-    handler: bin/hello
-    events:
-      - httpApi:
-          path: /hello
-          method: get
-  world:
+  test:
     handler: bin/test
     events:
       - httpApi:
           path: /test
+          method: get
+  create:
+    handler: bin/create
+    events:
+      - httpApi:
+          path: /create
+          method: get
+  read:
+    handler: bin/read
+    events:
+      - httpApi:
+          path: /read
+          method: get
+  update:
+    handler: bin/update
+    events:
+      - httpApi:
+          path: /update
+          method: get
+  delete:
+    handler: bin/delete
+    events:
+      - httpApi:
+          path: /delete
           method: get
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
